[package]
name = "tempo-storage-interop"
version = "0.8.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
alloy-primitives = "1.5.0"
thiserror = "2.0.14"
alloy-evm = { version = "0.25.2", optional = true }
revm = { version = "33.1.0", optional = true }

[features]
default = []
revm = ["dep:alloy-evm", "dep:revm"]

[dev-dependencies]
proptest = "1.7"
